--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
             <h2>Class of 2020</h2>
             <br>
             <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-2"><a href="./doc/NewResume_CKLI.pdf" target="_blank">RÉSUMÉ</a></div>
+                <div class="col-md-2"><a href="./about.html">ABOUT</a></div>
+                <div class="col-md-2"><a href="./projects.html">PROJECTS</a></div>
+                <div class="col-md-3"></div>
+            </div>
+            <div class="row">
                 <div class="col-md-4"></div>
-                <div class="col-md-1"><a href="./doc/NewResume_CKLI.pdf" target="_blank">RÉSUMÉ</a></div>
-                <div class="col-md-1"><a href="./about.html">ABOUT</a></div>
-                <div class="col-md-1"><a href="./projects.html">PROJECTS</a></div>
-                <div class="col-md-1"><a href="./notePage.html">NOTES</a></div>
+                <div class="col-md-2"><a href="./cs230.html">CS230 NOTES</a></div>
+                <div class="col-md-2"><a href="./cs246.html">CS246 NOTES</a></div>
                 <div class="col-md-4"></div>
             </div>
             <br>
