--- a/notePage.html
+++ b/notePage.html
@@ -40,7 +40,6 @@
                             <ul class="dropdown-menu">
                                 <li><a href="./cs230.html">CS 230</a></li>
                                 <li><a href="./cs246.html">CS 246</a></li>
-                                <li><a href="./econ101.html">ECON 101</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -81,7 +80,7 @@
                         <th colspan="4">Winter 2018</th>
                     </tr>
                     <tr>
-                        <td class="two" colspan="2">Math 235</td>
+                        <td class="two" colspan="2"></td>
                         <td class="two" colspan="2">Stat 231</td>
                     </tr>
                     <tr>
