--- a/cs230.html
+++ b/cs230.html
@@ -87,32 +87,32 @@
                 <div class="col-md-10"></div>
             </div>
             <div class="row">
-                <div class="col-md-1"><a href="#lec1">01</a></div>
-                <div class="col-md-1"><a href="#lec2">02</a></div>
-                <div class="col-md-1"><a href="#lec3">03</a></div>
-                <div class="col-md-1"><a href="#lec4">04</a></div>
-                <div class="col-md-1"><a href="#lec5">05</a></div>
-                <div class="col-md-1"><a href="#lec6">06</a></div>
-                <div class="col-md-1"><a href="#lec7">07</a></div>
-                <div class="col-md-1"><a href="#lec8">08</a></div>
-                <div class="col-md-1"><a href="#lec9">09</a></div>
-                <div class="col-md-1"><a href="#lec10">10</a></div>
-                <div class="col-md-1"><a href="#lec11">11</a></div>
-                <div class="col-md-1"><a href="#lec12">12</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec1">01</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec2">02</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec3">03</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec4">04</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec5">05</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec6">06</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec7">07</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec8">08</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec9">09</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec10">10</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec11">11</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec12">12</a></div>
             </div>
             <div class="row">
-                <div class="col-md-1"><a href="#lec13">13</a></div>
-                <div class="col-md-1"><a href="#lec14">14</a></div>
-                <div class="col-md-1"><a href="#lec15">15</a></div>
-                <div class="col-md-1"><a href="#lec16">16</a></div>
-                <div class="col-md-1"><a href="#lec17">17</a></div>
-                <div class="col-md-1"><a href="#lec18">18</a></div>
-                <div class="col-md-1"><a href="#lec19">19</a></div>
-                <div class="col-md-1"><a href="#lec20">20</a></div>
-                <div class="col-md-1"><a href="#lec21">21</a></div>
-                <div class="col-md-1"><a href="#lec22">22</a></div>
-                <div class="col-md-1"><a href="#lec23">23</a></div>
-                <div class="col-md-1"><a href="#lec24">24</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec13">13</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec14">14</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec15">15</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec16">16</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec17">17</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec18">18</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec19">19</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec20">20</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec21">21</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec22">22</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec23">23</a></div>
+                <div class="col-xs-2 col-md-1"><a href="#lec24">24</a></div>
             </div>
             <hr>
                          
